# ukf

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  install.sh
include/: truck_ukf.h  ukf.h
simulink/: compile_truck_ukf_sfunc.m  test_truck_ukf_sfunc.m  truck_ukf_sfunc.cpp
src/: main.cpp  truck_ukf.cpp  ukf.cpp
tests/: CMakeLists.txt  ukf_test.cpp
